update at company on 30/10/2017

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".ListUserActivity">
         </activity>
+        <activity android:name=".UserInfoActivity">
+        </activity>
     </application>
 
 </manifest>
