--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.0'
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
     testCompile 'junit:junit:4.12'
 }
